[project]
name = "rclonesync"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dropbox>=12.0.2",
    "dsync>=0.2.4",
    "fastapi>=0.116.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "rclone>=0.4.4",
    "requests>=2.32.5",
    "tenacity>=9.1.2",
    "uvicorn>=0.35.0",
]
